# cab

./: .gitignore  README.md  pyproject.toml
docs/: CAB_EEC_PIPELINE_PLAN.md
examples/: cab_eec.example.yaml
notebooks/: ab_most_probable_rl.ipynb  cab_pythia_fastjet_flavor_ratio.ipynb  cab_pythia_fastjet_pt_ratio.ipynb  cab_ratio_y1_crossing.ipynb
src/cab_eec/: __init__.py  cache.py  cleanup.py  cli.py  config.py  eec.py  event_io.py  fastjet_backend.py  io_tables.py  paths.py  pipeline.py  plotting.py  progress.py  records.py
tests/: test_cache.py  test_cleanup.py  test_config.py  test_eec.py  test_fastjet_backend.py  test_plotting.py  test_progress.py  test_selection.py
